[tool.poetry]
name = "langgraph-final"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
rag-weaviate = {path = "packages/rag-weaviate", develop = true}
langchain-experimental = "^0.0.56"
langgraph = "^0.0.32"
wikipedia = "^1.4.0"
langchainhub = "^0.1.15"
unstructured = "0.10.25"
requests = "^2.31.0"
openapi-schema-pydantic = "^1.2.4"
openapi-pydantic = "^0.4.0"
langchain = {extras = ["all"], version = "^0.1.14"}
pydantic = "^2.6.4"
crewai = "^0.22.5"
redis = "^5.0.3"
langchain-core = "^0.1.40"
pyowm = "^3.3.0"
langchain-groq = "^0.1.3"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
ipykernel = "^6.29.4"
pandas = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
